# stain-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/async_trait_plugins/: config.json  main.rs
examples/async_trait_plugins/config/: env.rs  json.rs  mod.rs
examples/async_trait_plugins/stains/: mod.rs
examples/axum_middleware/: logger.rs  main.rs  middleware.rs  not_found.rs
src/: internal.rs  lib.rs  macros.rs
stain/: Cargo.toml
stain-macros/: Cargo.toml
stain-macros/src/: args.rs  lib.rs  traits.rs  utils.rs
stain/src/: lib.rs
tests/: exhaustive.rs  exhaustive_pub.rs  exhaustive_pub_crate.rs  exhaustive_pub_super.rs  implicit_ordering.rs  implicit_ordering_pub.rs  implicit_ordering_pub_crate.rs  implicit_ordering_super.rs  implicit_prefix.rs  implicit_prefix_pub.rs  implicit_prefix_pub_crate.rs  implicit_prefix_super.rs  minimal.rs  minimal_pub.rs  minimal_pub_crate.rs  minimal_self.rs  minimal_super.rs
