[package]
name = "stain"
version = "0.0.1"
edition = "2021"
rust-version = "1.66"
authors = ["Reynaldo Bontje <rey.bontje80@gmail.com>"]
keywords = ["plugins", "traits"]
repository = "https://github.com/plugd-in/stain-rs"


[dependencies]
itertools = "0.14.0"
linkme = "0.3"
paste = "1.0.15"
rustversion = "1.0.22"

[dev-dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
