[package]
name = "stain-macros"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-error = "1.0.4"
heck = "0.5.0"
